// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms|Badge default 1`] = `
<span
  className="sc-AxjAm cdoYt"
>
  Badge
</span>
`;

exports[`Storyshots Atoms|Badge greyscale 1`] = `
<span
  className="sc-AxjAm ewHbjk"
>
  Badge
</span>
`;

exports[`Storyshots Atoms|Badge reverse 1`] = `
<span
  className="sc-AxjAm gYmokW"
>
  Badge
</span>
`;

exports[`Storyshots Atoms|Badge secondary 1`] = `
<span
  className="sc-AxjAm dVHAGW"
>
  Badge
</span>
`;

exports[`Storyshots Atoms|Button action 1`] = `
<button
  className="sc-AxhCb grIXLI"
  height={40}
  onClick={[Function]}
  type="button"
>
  Button text
</button>
`;

exports[`Storyshots Atoms|Button danger 1`] = `
<button
  className="sc-AxhCb dZxmSe"
  height={40}
  onClick={[Function]}
  type="button"
>
  Button text
</button>
`;

exports[`Storyshots Atoms|Button default 1`] = `
<button
  className="sc-AxhCb grIXLI"
  height={40}
  onClick={[Function]}
  type="button"
>
  Button text
</button>
`;

exports[`Storyshots Atoms|Button disabled 1`] = `
<button
  className="sc-AxhCb iNfcSr"
  disabled={true}
  height={40}
  onClick={[Function]}
  type="button"
>
  Button text
</button>
`;

exports[`Storyshots Atoms|Button height 1`] = `
<button
  className="sc-AxhCb kocySL"
  height={80}
  onClick={[Function]}
  type="button"
>
  Button text
</button>
`;

exports[`Storyshots Atoms|Button link 1`] = `
<a
  className="sc-AxiKw ibSzVo"
  height={40}
  href="https://tray.io"
>
  Tray.io
</a>
`;

exports[`Storyshots Atoms|Button reverse 1`] = `
<button
  className="sc-AxhCb fLPosH"
  height={40}
  onClick={[Function]}
  type="button"
>
  Button text
</button>
`;

exports[`Storyshots Atoms|Button secondary 1`] = `
<button
  className="sc-AxhCb jqWxAz"
  height={40}
  onClick={[Function]}
  type="button"
>
  Button text
</button>
`;

exports[`Storyshots Atoms|Button transparent 1`] = `
<button
  className="sc-AxhCb bhwrRv"
  height={40}
  onClick={[Function]}
  type="button"
>
  Button text
</button>
`;

exports[`Storyshots Atoms|Heading default 1`] = `
<h1
  className="sc-AxhUy ffJIsg"
>
  Title text
</h1>
`;

exports[`Storyshots Atoms|Heading level 2 1`] = `
<h2
  className="sc-AxhUy goodIZ"
>
  Title text
</h2>
`;

exports[`Storyshots Atoms|Heading level 3 1`] = `
<h3
  className="sc-AxhUy fqYRvq"
>
  Title text
</h3>
`;

exports[`Storyshots Atoms|Heading secondary 1`] = `
<h1
  className="sc-AxhUy hNjUvC"
>
  Title text
</h1>
`;

exports[`Storyshots Organisms|Header Authentication 1`] = `
<div
  className="sc-AxgMl hrOXid"
>
  <h2
    className="sc-AxhUy kqAuAC"
  >
    Authentications
  </h2>
  <button
    className="sc-AxhCb grIXLI"
    height={40}
    onClick={[Function]}
    type="button"
  >
    New authentication
  </button>
</div>
`;

exports[`Storyshots Organisms|Header Dashboard 1`] = `
<div
  className="sc-AxgMl hrOXid"
>
  <h2
    className="sc-AxhUy kqAuAC"
  >
    Dashboard
  </h2>
  <button
    className="sc-AxhCb grIXLI"
    height={40}
    onClick={[Function]}
    type="button"
  >
    New workflow
  </button>
</div>
`;
